# pybaw

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
pybaw/: __init__.py  baw.py  baw_core.pyx
tests/: test_baw.py
