[build-system]
requires = ["setuptools", "cython", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "pybaw"
version = "1.0.0"
description = "Barone-Adesi-Whaley (1987) American option pricing and implied volatility (Cython)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Martial Ren" }]
requires-python = ">=3.11"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["pybaw"]

[tool.cibuildwheel]
# numpy/scipy don't ship wheels for musllinux, 32-bit, or PyPy targets
skip = ["*-musllinux*", "*_i686", "*-win32", "pp*"]
test-requires = ["pytest"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
# x86_64 is cross-compiled from the arm64 runner; its tests are skipped
archs = ["arm64", "x86_64"]
